# dcgan-cuda

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  boostrap  requirements.txt
conv2d/: conv.cc  conv.hh  conv_simplified.cc  conv_simplified.hh  main.cc  ref_c1f1i1s1p0.py  ref_c1f1i1snp0.py  ref_c1f1i1snpn.py  ref_cnf1i1s1p0.py  ref_cnfni1s1p0.py  ref_cnfni1snpn.py  ref_full.py  tensor4.cc  tensor4.hh  tensor4.hxx  tensor4_access.cc  tensor4_access.hh  tensors_saver.py  test.py
dcgan/: gen_mnist.py  main.cu  main.py  main_base.cu  main_base.py  main_fwd.cu  main_fwd.py  main_iter.cu  main_iter.py  preprocess.py  utils.py
examples/: nn_mnist.cc  nn_mnist.cu
gan_tf/: main.py  model.py  utils.py
src/api/: CMakeLists.txt  activ.cc  activ.cu  activ.hh  adam-optimizer.cc  adam-optimizer.cu  adam-optimizer.hh  copy-initializer.cc  copy-initializer.hh  cost.cc  cost.cu  cost.hh  fwd.hh  initializer.hh  layers.cc  layers.cu  layers.hh  normal-initializer.cc  normal-initializer.cu  normal-initializer.hh  sgd-optimizer.cc  sgd-optimizer.cu  sgd-optimizer.hh  zero-initializer.cc  zero-initializer.cu  zero-initializer.hh
src/cpu/: CMakeLists.txt  conv2d.cc  conv2d.hh  fwd.hh  kernels.cc  kernels.cu  kernels.hh  ops.hh  ops.hxx  runner.cc  runner.cu  runner.hh  runtime-infos.hh  simd_kernels.cu  simd_kernels.hh  simd_ops.hh  simd_ops.hxx  thread-pool-runner.cc  thread-pool-runner.hh
src/datasets/: CMakeLists.txt  celeba.cu  celeba.hh  jpg.cu  jpg.hh  mnist.cc  mnist.cu  mnist.hh
src/gpu/: CMakeLists.txt  conv2d.cu  conv2d.hh  conv2d_access.hh  conv2d_gemm.hh  conv2d_mat.hh  conv2d_naive.hh  conv2d_shared1.hh  conv2d_shared2.hh  conv2d_traits.hh  fwd.hh  kernels.cu  kernels.hh  matmul.cu  matmul.hh  relu.cu  relu.hh  runner.cu  runner.hh  sigmoid.cu  sigmoid.hh  softmax.cu  softmax.hh  sum.cu  sum.hh  update.cu  update.hh
src/math_cpu/: CMakeLists.txt  mat.cc  mat.hh  ops.hh  ops.hxx
src/memory/: CMakeLists.txt  alloc.cc  alloc.cu  alloc.hh  copy.hh  copy.hxx  mode.cc  mode.cu  mode.hh  types.hh
src/network/: CMakeLists.txt  activation.cc  activation.hh  cost-function.cc  cost-function.hh  cost-function.hxx  fully-connected-layer.cc  fully-connected-layer.hh  fully-connected-layer.hxx  fwd.hh  layer.cc  layer.hh  layer.hxx  memory.cc  memory.hh  memory.hxx  network.cc  network.hh
src/ops/: CMakeLists.txt  adam-update.cc  adam-update.cu  adam-update.hh  add.cu  add.hh  argmax-accuracy.cc  argmax-accuracy.hh  compiled-op.hh  conv2d-bias-add-grad.cu  conv2d-bias-add-grad.hh  conv2d-bias-add.cc  conv2d-bias-add.cu  conv2d-bias-add.hh  conv2d-input-grad.cc  conv2d-input-grad.hh  conv2d-kernel-grad.cc  conv2d-kernel-grad.cu  conv2d-kernel-grad.hh  conv2d-transpose-input-grad.cc  conv2d-transpose-input-grad.hh  conv2d-transpose-kernel-grad.cu  conv2d-transpose-kernel-grad.hh  conv2d-transpose.cc  conv2d-transpose.cu  conv2d-transpose.hh  conv2d.cc  conv2d.hh  fwd.hh  graph.cc  graph.cu  graph.hh  input.cc  input.hh  leaky-relu-grad.cu  leaky-relu-grad.hh  log-softmax.cc  log-softmax.cu  log-softmax.hh  mat-mat-mul.cc  (+59 more)
src/runtime/: CMakeLists.txt  fwd.hh  graph.cc  graph.cu  graph.hh  node.cc  node.cu  node.hh  nodes-list.cu  nodes-list.hh  optimizer.cc  optimizer.cu  optimizer.hh
src/utils/: CMakeLists.txt  arguments.cu  arguments.hh  date.cu  date.hh  dot-graph.cc  dot-graph.hh  dot-tree.cu  dot-tree.hh  xorshift.cu  xorshift.hh
tests/: big_mat.hh  cnn_mnist.py  gen_celeba.py  mnist_test.sh  model_dcgan.py  nn_mnist.py  ref_adam_update.py  ref_add.py  ref_argmax.py  ref_conv2d.py  ref_conv2d_bias_add.py  ref_conv2d_bias_add_grad.py  ref_conv2d_grad.py  ref_conv2d_padding.py  ref_conv2d_padding_grad.py  ref_conv2d_transpose.py  ref_conv2d_transpose_grad.py  ref_conv_bigp0.py  ref_conv_d0.py  ref_conv_d1.py  ref_conv_d2.py  ref_conv_d3.py  ref_conv_d4.py  ref_conv_dk_d0.py  ref_conv_dk_d1.py  ref_conv_dk_d2.py  ref_conv_dk_d3.py  ref_conv_dk_g0.py  ref_conv_dk_g1.py  ref_conv_dk_g2.py  ref_conv_dk_g3.py  ref_conv_dx_d0.py  ref_conv_dx_d1.py  ref_conv_dx_d2.py  ref_conv_dx_d3.py  ref_conv_dx_g0.py  ref_conv_dx_g1.py  ref_conv_dx_g2.py  ref_conv_dx_g3.py  ref_conv_g0.py  (+148 more)
tests/pyts/: big_mat_generator.py  commander.py  ioutils.py  json_ts_builder.py  json_ts_reader.py  shell.py  test_suite_cmd.py  ts.py
tests/scripts/: gen_datasets.sh  test_basic.sh  test_dataset_weights.sh  train_mnist_sgd.sh
