set(SRC
  adam-update.cc
  argmax-accuracy.cc
  conv2d.cc
  conv2d-bias-add.cc
  conv2d-input-grad.cc
  conv2d-kernel-grad.cc
  conv2d-bias-add-grad.cc
  graph.cc
  input.cc
  leaky-relu-grad.cc
  log-softmax.cc
  mat-mat-mul.cc
  mat-mul-add.cc
  mat-rvect-add.cc
  mat-sum.cc
  moment-update.cc
  mse.cc
  mse-grad.cc
  op.cc
  ops-builder.cc
  reshape.cc
  relu-grad.cc
  seq.cc
  shape.cc
  sigmoid-cross-entropy.cc
  sigmoid-cross-entropy-grad.cc
  sigmoid-grad.cc
  softmax.cc
  softmax-cross-entropy.cc
  softmax-cross-entropy-grad.cc
  tanh-grad.cc
  update.cc
  variable.cc
  vect-sigmoid.cc
  vect-relu.cc
  vect-relu-leaky.cc
  vect-tanh.cc
)

add_library(ops_obj OBJECT ${SRC})
