set(SRC
  add.cu
  adam-update.cu
  argmax-accuracy.cu
  conv2d.cu
  conv2d-bias-add.cu
  conv2d-input-grad.cu
  conv2d-kernel-grad.cu
  conv2d-bias-add-grad.cu
  conv2d-transpose.cu
  conv2d-transpose-input-grad.cu
  conv2d-transpose-kernel-grad.cu
  graph.cu
  input.cu
  leaky-relu-grad.cu
  log-softmax.cu
  mat-mat-mul.cu
  mat-mul-add.cu
  mat-rvect-add.cu
  mat-sum.cu
  moment-update.cu
  mse.cu
  mse-grad.cu
  op.cu
  ops-builder.cu
  reshape.cu
  relu-grad.cu
  seq.cu
  shape.cu
  sigmoid-cross-entropy.cu
  sigmoid-cross-entropy-grad.cu
  sigmoid-grad.cu
  softmax.cu
  softmax-cross-entropy.cu
  softmax-cross-entropy-grad.cu
  tanh-grad.cu
  update.cu
  variable.cu
  vect-sigmoid.cu
  vect-relu.cu
  vect-relu-leaky.cu
  vect-tanh.cu
)

add_library(ops_obj OBJECT ${SRC})
